--- a/SgfReader/SgfReader.csproj
+++ b/SgfReader/SgfReader.csproj
@@ -45,9 +45,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Chart.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,6 +53,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Punct.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Settings1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings1.settings</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -67,6 +72,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -77,9 +83,124 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Settings1.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings1.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_b.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_down_left.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_down_left_stone.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_down_right.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_down_right_stone.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_down_stone.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_left.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_left_stone.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_right.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_right_stone.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_stone.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_up.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_up_left.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_up_left_stone.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_up_right.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_up_right_stone.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_up_stone.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\star_point.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_down_b.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_down_left_b.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_down_left_w.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_down_right_b.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_down_right_w.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_down_w.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_left_b.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_left_w.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_right_b.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_right_w.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_up_b.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_up_left_b.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_up_left_w.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_up_right_b.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_up_right_w.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_up_w.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\point_w.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
